--- a/src/benchmark/instrumentation/cuda/CMakeLists.txt
+++ b/src/benchmark/instrumentation/cuda/CMakeLists.txt
@@ -10,22 +10,12 @@ target_include_directories(cuda_utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(cuda_utils PUBLIC CUDA::cuda_driver CUDA::cupti)
 
 
-add_library(instrumentation_cuda_common STATIC
+add_library(instrumentation_cuda STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation.h
 )
-target_include_directories(instrumentation_cuda_common INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(instrumentation_cuda_common PUBLIC cuda_utils)
-
-add_library(instrumentation_cuda STATIC
-	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation_noits.cpp
-)
-target_link_libraries(instrumentation_cuda PUBLIC instrumentation_cuda_common)
-
-add_library(instrumentation_cudaits STATIC
-	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation_its.cpp
-)
-target_link_libraries(instrumentation_cudaits PUBLIC instrumentation_cuda_common)
+target_include_directories(instrumentation_cuda INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(instrumentation_cuda PUBLIC cuda_utils)
 
 
 project(measure_globaltimer_res CUDA)
@@ -41,5 +31,5 @@ set_target_properties(measure_globaltimer_res PROPERTIES
 
 
 # sometimes FindCUDAToolkit's `CUDA::cupti` target is broken
-target_include_directories(instrumentation_cuda_common PRIVATE ${CUDA_cupti_INCLUDE_DIR})
+target_include_directories(instrumentation_cuda PRIVATE ${CUDA_cupti_INCLUDE_DIR})
 target_include_directories(measure_globaltimer_res PRIVATE ${CUDA_cupti_INCLUDE_DIR})
