--- a/src/benchmark/benchmark-bwd-comparison.art.in
+++ b/src/benchmark/benchmark-bwd-comparison.art.in
@@ -10,10 +10,11 @@ fn @run_benchmark(device: AccDevice, num_threads_min: i32, num_threads_max: i32,
 
 	run_queue_benchmark(
 		device,
+		bwd_comparison_benchmark(device, block_size, num_attempts),
 		"@queue_short_name@",
 		@queue_constructor_name@,
 		@queue_size@,
 		num_threads_min,
 		num_threads_max,
-		bwd_comparison_benchmark(device, block_size, num_attempts))
+		create_queue_instrumentation_none)
 }
