clean up csv printing

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -32,6 +32,7 @@ set(COMMON_BENCHMARK_FILES
 	${AnyQ_SOURCE_DIR}/framework.art
 	${AnyQ_SOURCE_DIR}/utils.art
 	${AnyQ_SOURCE_DIR}/random.art
+	${CMAKE_CURRENT_SOURCE_DIR}/csv.art
 	${CMAKE_CURRENT_SOURCE_DIR}/benchmark.art
 	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation.art
 	${CMAKE_CURRENT_SOURCE_DIR}/queue-benchmark.art
