rename concurrency contexts, move stuff into concurrency.art

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,8 +33,7 @@ function(add_anydsl_executable _target)
 endfunction()
 
 set(COMMON_ARTIC_FILES
-	${CMAKE_CURRENT_SOURCE_DIR}/gpu.art
-	${CMAKE_CURRENT_SOURCE_DIR}/atomic.art
+	${CMAKE_CURRENT_SOURCE_DIR}/concurrency.art
 	${CMAKE_CURRENT_SOURCE_DIR}/queue.art
 	# ${CMAKE_CURRENT_SOURCE_DIR}/ringbuffer_allocator.art
 	# ${CMAKE_CURRENT_SOURCE_DIR}/pipeline.art
