--- a/src/benchmark/instrumentation/CMakeLists.txt
+++ b/src/benchmark/instrumentation/CMakeLists.txt
@@ -1,8 +1,9 @@
 
 
-if (cpu IN_LIST AnyQ_PLATFORMS OR fiberless IN_LIST AnyQ_PLATFORMS)
+if (cpu IN_LIST AnyQ_PLATFORMS OR fiberless IN_LIST AnyQ_PLATFORMS OR scalar IN_LIST AnyQ_PLATFORMS)
 	add_subdirectory(cpu)
 	add_library(instrumentation_fiberless ALIAS instrumentation_cpu)
+	add_library(instrumentation_scalar ALIAS instrumentation_cpu)
 endif()
 
 if (cuda IN_LIST AnyQ_PLATFORMS OR nvvm IN_LIST AnyQ_PLATFORMS)
