--- a/src/benchmark/benchmark-queue-concurrent.art.in
+++ b/src/benchmark/benchmark-queue-concurrent.art.in
@@ -13,6 +13,7 @@ fn @run_benchmark(device: AccDevice, num_threads_min: i32, num_threads_max: i32,
 
 	run_queue_benchmark(
 		device,
+		block_size,
 		producer_consumer_queue_concurrent_push_pop_benchmark(device, block_size, num_attempts, p_enq, p_deq, workload_size, false),
 		"@queue_short_name@",
 		@queue_constructor_name@,
