Update .drone.yml to improve feature comparison

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ steps:
     image: python:3
     commands:
       - python benchmark.py export --out baseline "benchmark-queue-concurrent--.*"
-      - python benchmark.py export --out cuda-its "benchmark-(queue-concurrent)--.*-cuda" "benchmark-(queue-concurrent-its)--.*-cuda"
+      - python benchmark.py export --out cuda-its --template html/result_group.html "benchmark-(queue-concurrent)--.*-cuda" "benchmark-(queue-concurrent-its)--.*-cuda"
 
   - name: upload
     image: beeblebrox.cg.uni-saarland.de/alpine/drone-plugin-sftp
