--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ steps:
     image: python:3
     commands:
       - python benchmark.py export --out baseline "benchmark-queue-concurrent--.*"
-      - python benchmark.py export --out cuda-its --template html/result_group.html "benchmark-(queue-concurrent)--.*-cuda" "benchmark-(queue-concurrent-its)--.*-cuda"
+      - python benchmark.py export --out cuda-its --template html/result_group.html "benchmark-(queue-concurrent)--.*-(?:cuda|nvvm|scalar)" "benchmark-(queue-concurrent-its)--.*-(?:cuda|nvvm|scalar)"
       - python benchmark.py export --out arm-lse --template html/result_group.html "benchmark-(queue-concurrent)--.*-Apple_M1-cpu" "benchmark-(queue-concurrent-nolse)--.*-Apple_M1-cpu"
 
   - name: upload
