--- a/src/benchmark/instrumentation/CMakeLists.txt
+++ b/src/benchmark/instrumentation/CMakeLists.txt
@@ -1,9 +1,9 @@
 
 
-if (cpu IN_LIST AnyQ_PLATFORMS OR tbb IN_LIST AnyQ_PLATFORMS OR scalar IN_LIST AnyQ_PLATFORMS)
+if (cpu IN_LIST AnyQ_PLATFORMS OR tbb IN_LIST AnyQ_PLATFORMS OR cpu-scalar IN_LIST AnyQ_PLATFORMS)
 	add_subdirectory(cpu)
 	add_library(instrumentation_tbb ALIAS instrumentation_cpu)
-	add_library(instrumentation_scalar ALIAS instrumentation_cpu)
+	add_library(instrumentation_cpu-scalar ALIAS instrumentation_cpu)
 endif()
 
 if (cuda IN_LIST AnyQ_PLATFORMS OR nvvm IN_LIST AnyQ_PLATFORMS)
