--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ set(mapping_source_files_amdgpu "${CMAKE_CURRENT_SOURCE_DIR}/mapping_amdgpu.art"
 set(mapping_source_files_cpu "${CMAKE_CURRENT_SOURCE_DIR}/mapping_cpu.art")
 set(mapping_source_files_cpu-scalar "${CMAKE_CURRENT_SOURCE_DIR}/mapping_scalar.art")
 set(mapping_source_files_tbb "${CMAKE_CURRENT_SOURCE_DIR}/mapping_tbb.art")
+set(mapping_source_files_tbb-scalar "${CMAKE_CURRENT_SOURCE_DIR}/mapping_tbb-scalar.art")
 set(mapping_source_files_cuda "${CMAKE_CURRENT_SOURCE_DIR}/mapping_cuda.art")
 set(mapping_source_files_nvvm "${CMAKE_CURRENT_SOURCE_DIR}/mapping_nvvm.art")
 
@@ -84,6 +85,7 @@ add_library(fiberless-support ${CMAKE_CURRENT_SOURCE_DIR}/fiberless.cpp)
 target_link_libraries(fiberless-support Threads::Threads)
 
 set(ADDITIONAL_LINK_DEPENDENCY_tbb fiberless-support)
+set(ADDITIONAL_LINK_DEPENDENCY_tbb-scalar fiberless-support)
 
 set(AnyQ_PLATFORMS)
 
@@ -119,6 +121,9 @@ endif()
 
 if (AnyQ_FIBER_SUPPORT)
 	list(APPEND AnyQ_PLATFORMS cpu-scalar)
+endif()
+if (AnyDSL_runtime_HAS_TBB_SUPPORT)
+	list(APPEND AnyQ_PLATFORMS tbb-scalar)
 endif()
 
 
