--- a/.drone.yml
+++ b/.drone.yml
@@ -8,8 +8,8 @@ steps:
     commands:
       - python benchmark.py export --out baseline "benchmark-queue-concurrent--.*"
       - python benchmark.py export --out vectorization --template html/result_group.html "benchmark-(vectorization)--.*" "benchmark-(vectorization-its)--.*"
-      - python benchmark.py export --out cuda-its --template html/result_group.html "benchmark-(queue-concurrent)--.*-(?:cuda|nvvm|scalar)" "benchmark-(queue-concurrent-its)--.*-(?:cuda|nvvm|scalar)"
-      - python benchmark.py export --out arm-lse --template html/result_group.html "benchmark-(queue-concurrent)--.*-Apple_M1-cpu" "benchmark-(queue-concurrent-nolse)--.*-Apple_M1-cpu"
+      - python benchmark.py export --out cuda-its --template html/result_group.html "benchmark-(queue-concurrent)--.*-(?:cuda|nvvm|tbb-scalar)" "benchmark-(queue-concurrent-its)--.*-(?:cuda|nvvm|tbb-scalar)"
+      - python benchmark.py export --out arm-lse --template html/result_group.html "benchmark-(queue-concurrent)--.*-Apple_M1-tbb" "benchmark-(queue-concurrent-nolse)--.*-Apple_M1-tbb"
 
   - name: upload
     image: beeblebrox.cg.uni-saarland.de/alpine/drone-plugin-sftp
